Adds balance method to chest model. It sum all coins

--- a/app/views/chests/show.html.erb
+++ b/app/views/chests/show.html.erb
@@ -1,6 +1,12 @@
 <%= chest.name %>
 
-<%= link_to 'New Coin', new_chest_coin_path(chest) %>
+<p>
+  Balance: <%= chest.balance %>
+</p>
+
+<p>
+  <%= link_to 'New Coin', new_chest_coin_path(chest) %>
+</p>
 
 <% if chest.coins.any? %>
   <ul>
