Adds categories to coins

--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for [chest, coin] do |f| %>
   <%= f.number_field :value %>
+  <%= f.select :category_id, transform_for_select(categories, :id, :name) %>
 
   <%= f.submit 'Create' %>
 <% end %>
