--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -1,6 +1,8 @@
 <%= form_for [chest, coin] do |f| %>
-  <%= f.number_field :value %>
-  <%= f.select :category_id, transform_for_select(categories, :id, :name), { include_blank: true } %>
+  <%= f.number_field :value %> <br>
+  <%= f.select :category_id, transform_for_select(categories, :id, :name), { include_blank: true } %> <br>
+  <%= f.date_field :created_at %>
+
 
   <%= f.submit 'Create' %>
 <% end %>
