Adds styles to dashboard views

--- a/app/views/chests/show.html.erb
+++ b/app/views/chests/show.html.erb
@@ -9,9 +9,13 @@
 </p>
 
 <% if chest.coins.any? %>
-  <ul>
-    <% chest.coins.each do |coin| %>
-      <li><%= coin.value %></li>
-    <% end %>
-  </ul>
+  <table>
+    <tbody>
+      <% chest.coins.each do |coin| %>
+        <tr>
+          <td><%= coin.value %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 <% end %>
