--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -5,7 +5,11 @@
   <%= f.select :category_id, transform_for_select(categories, :id, :name), { include_blank: true } %> <br>
   <%= f.label :created_at, 'When' %>
   <%= f.date_field :created_at %>
-
+  <%= f.label :is_recurrent do %>
+    <%= f.check_box :is_recurrent %>
+    Recurrent
+  <% end %>
+  <%= f.select :period, transform_for_select(Coin::DEFAULT_PERIODS, :time, :time) %>
 
   <%= f.submit 'Create' %>
   <%= link_to 'Back', chest_path(chest) %>
