--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for [chest, coin] do |f| %>
+  <%= render "shared/error_messages", m: coin %>
   <%= f.label :value %>
   <%= f.number_field :value %> <br>
   <%= f.label :category %>
