--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,7 +14,7 @@
   <body class="dashboard">
 
     <%= render 'shared/dashboard/menu' %>
-    <div class="dashboard-panel">
+    <div class="row">
       <%= yield %>
     </div>
     <%= javascript_include_tag "application" %>
