--- a/app/views/coins/_form.html.erb
+++ b/app/views/coins/_form.html.erb
@@ -1,17 +1,20 @@
-<%= form_for [chest, coin] do |f| %>
-  <%= render "shared/error_messages", m: coin %>
-  <%= f.label :value %>
-  <%= f.number_field :value %> <br>
-  <%= f.label :category %>
-  <%= f.select :category_id, transform_for_select(categories, :id, :name), { include_blank: true } %> <br>
-  <%= f.label :created_at, 'When' %>
-  <%= f.date_field :created_at %>
-  <%= f.label :is_recurrent do %>
-    <%= f.check_box :is_recurrent %>
-    Recurrent
-  <% end %>
-  <%= f.select :period, transform_for_select(Coin::DEFAULT_PERIODS, :time, :time) %>
+<% if chest.id %>
+  <%= form_for [chest, coin], html: { class: 'small-12 column'} do |f| %>
+    <%= render "shared/error_messages", m: coin %>
+    <%= render "default_form_fields", coin: coin, f: f %>
 
-  <%= f.submit 'Create' %>
-  <%= link_to 'Back', chest_path(chest) %>
+    <%= f.submit (is_new)? 'Create': 'Edit', class: 'button success' %>
+    <%= link_to 'Back', chest_path(chest) %>
+  <% end %>
+<% else %>
+  <%= form_for coin, html: { class: 'small-12 column'} do |f| %>
+    <%= render "shared/error_messages", m: coin %>
+    <%= f.label :chest %>
+    <%= f.select :chest_id, transform_for_select(chests, :id, :name), { include_blank: true } %>
+    <%= render "default_form_fields", coin: coin, f: f %>
+
+    <%= f.submit (is_new)? 'Create': 'Edit', class: 'button success' %>
+    <%= link_to 'Back', coins_path %>
+  <% end %>
 <% end %>
+
