--- a/app/views/shared/dashboard/_menu.html.erb
+++ b/app/views/shared/dashboard/_menu.html.erb
@@ -1,5 +1,37 @@
-<div class="dashboard-sidebar-menu">
-  <ul class="side-nav">
-    <li><%= link_to 'My Chests', chests_path %></li>
-</ul>
-</div>
+<nav class="top-bar" data-topbar>
+  <ul class="title-area">
+    <li class="name">
+      <h1><%= link_to "#{current_user.email}'s Wallet", root_path %></h1>
+    </li>
+    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+    <li class="toggle-topbar menu-icon">
+      <a href="#"><span>Menu</span></a>
+    </li>
+  </ul>
+  <section class="top-bar-section">
+    <!-- Left Nav Section -->
+    <ul class="left">
+      <li class="<%= active_menu(controller_name, 'chests') %>">
+        <%= link_to 'My Chests', chests_path %>
+      </li>
+      <li class="<%= active_menu(controller_name, 'coins') %>">
+        <%= link_to 'Coins', coins_path %>
+      </li>
+    </ul>
+
+    <!-- Right Nav Section -->
+    <ul class="right">
+      <li class="active">
+        <a href="#">Right Button Active</a>
+      </li>
+      <li class="has-dropdown">
+        <a href="#">Right Button Dropdown</a>
+        <ul class="dropdown">
+          <li>
+            <a href="#">First link in dropdown</a>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+</nav>
