--- a/app/views/chests/index.html.erb
+++ b/app/views/chests/index.html.erb
@@ -1,5 +1,5 @@
 <div class="small-12 column">
-  <%= link_to 'New Chest', new_chest_path, class: 'button' %>
+  <%= link_to 'New Chest', new_chest_path, class: 'button small-12' %>
   <% if chests.any? %>
     <table class="small-12 column">
       <tbody>
