--- a/app/views/chests/new.html.erb
+++ b/app/views/chests/new.html.erb
@@ -1,4 +1,4 @@
 <div class="small-12 column">
-  <h1>Create a new chest</h1>
+  <h2>Create a new Chest</h2>
 </div>
 <%= render 'form', is_new: true %>
