--- a/app/views/coins/_default_form_fields.html.erb
+++ b/app/views/coins/_default_form_fields.html.erb
@@ -1,10 +1,8 @@
 <%= render "shared/error_messages", m: coin %>
-<%= f.label :value %>
-<%= f.number_field :value %>
-<%= f.label :category %>
-<%= f.select :category_id, transform_for_select(categories, :id, :name), { include_blank: true } %>
-<%= f.label :created_at, 'When' %>
-<%= f.date_field :created_at %>
+<%= f.number_field :value, placeholder: 'Value' %>
+<%= f.label :category %> <br>
+<%= f.select :category_id, transform_for_select(categories, :id, :name), include_blank: true %>
+<%= f.date_field :created_at, placeholder: 'When? dd/mm/yyyy' %>
 <%= f.label :is_recurrent do %>
   <%= f.check_box :is_recurrent %>
   Recurrent
