--- a/app/views/coins/edit.html.erb
+++ b/app/views/coins/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="small-12 column">
-  <h1>Edit coin <%= chest ? "from #{chest.name}" : '' %></h1>
+  <h1>Edit coin <%= coin.chest ? "from #{coin.chest.name}" : '' %></h1>
 </div>
 <%= render 'form', is_new: false %>
