--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -14,6 +14,7 @@
   <body class="dashboard">
 
     <%= render 'shared/dashboard/menu' %>
+    <div class="row"><div class="small-12 columns">&nbsp;</div></div>
     <div class="row">
       <%= yield %>
     </div>
