--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -4,6 +4,6 @@
 
   <%= f.submit (is_new)? 'Create': 'Edit', class: 'button success small-12' %>
   <div class="small-12 text-center">
-    <%= link_to 'Back', "category_path" %>
+    <%= link_to 'Back', categories_path %>
   </div>
 <% end %>
