--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,21 @@
 <div class="small-12 column text-center">
-  <h2><%= category.name %></h2>
+  <h2><%= category.name %> Category</h2>
+</div>
+
+<div class="small-12 column">
+  <% if coins.any? %>
+    <table class="small-12 balance-table">
+      <tbody>
+        <% coins.each do |coin| %>
+          <tr class="row-<%= coin_color(coin.value) %>">
+            <td><%= number_to_currency coin.value %></td>
+            <td><%= coin.category_name %></td>
+            <td><%= link_to 'Edit', edit_coin_path(coin) %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% else %>
+    <div class="alert-box info">No coins added yet.</div>
+  <% end %>
 </div>
