--- a/app/views/shared/dashboard/_menu.html.erb
+++ b/app/views/shared/dashboard/_menu.html.erb
@@ -17,6 +17,9 @@
       <li class="<%= active_menu(controller_name, 'coins') %>">
         <%= link_to 'Coin flow', coins_path %>
       </li>
+      <li class="<%= active_menu(controller_name, 'categories') %>">
+        <%= link_to 'Categories', categories_path %>
+      </li>
     </ul>
 
     <!-- Right Nav Section -->
